chapter 6 weather prediction started

--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,16 @@ resnet50_coco_best_v2.0.1.h5
 token
 debug.log
 *.log
-
+*.h5
 *.jpg
+*.txt
 keras_training/dogs-vs-cats/sampleSubmission.csv
 keras_training/dogs-vs-cats/test1.zip
 keras_training/dogs-vs-cats/train.zip
 keras_training/dogs-vs-cats.zip
 yolo.h5
 keras_training/cats_vs_dogs_small_2.h5
+imageai-2.0.3-py3-none-any.whl
+*.gz
+*.vec
+*.txt_err
