blackjack base created

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 $GIT_DIR/envs/
+$GIT_DIR/Black-Jack-master/
 $GIT_DIR/notebooks/
 $GIT_DIR/.ipynb_checkpoints/
 $GIT_DIR/__pycache__/
@@ -28,3 +29,83 @@ keras_training/8_style/portrait.png
 keras_training/.ipynb_checkpoints/8_stylized_image-checkpoint.ipynb
 *.gif
 *.mp4
+Black-Jack-master/.gitpod.dockerfile
+Black-Jack-master/.gitpod.yml
+Black-Jack-master/__pycache__/casino.cpython-37.pyc
+Black-Jack-master/__pycache__/get_pip.cpython-37.pyc
+Black-Jack-master/__pycache__/install_requirements.cpython-37.pyc
+Black-Jack-master/casino.py
+Black-Jack-master/chips/1.png
+Black-Jack-master/chips/10.png
+Black-Jack-master/chips/100.png
+Black-Jack-master/chips/1000.png
+Black-Jack-master/chips/2.png
+Black-Jack-master/chips/20.png
+Black-Jack-master/chips/2000.png
+Black-Jack-master/chips/25.png
+Black-Jack-master/chips/250.png
+Black-Jack-master/chips/5.png
+Black-Jack-master/chips/50.png
+Black-Jack-master/chips/500.png
+Black-Jack-master/chips/5000.png
+Black-Jack-master/get_pip.py
+Black-Jack-master/install_requirements.py
+Black-Jack-master/main.py
+Black-Jack-master/png/10_of_clubs.png
+Black-Jack-master/png/10_of_diamonds.png
+Black-Jack-master/png/10_of_hearts.png
+Black-Jack-master/png/10_of_spades.png
+Black-Jack-master/png/2_of_clubs.png
+Black-Jack-master/png/2_of_diamonds.png
+Black-Jack-master/png/2_of_hearts.png
+Black-Jack-master/png/2_of_spades.png
+Black-Jack-master/png/3_of_clubs.png
+Black-Jack-master/png/3_of_diamonds.png
+Black-Jack-master/png/3_of_hearts.png
+Black-Jack-master/png/3_of_spades.png
+Black-Jack-master/png/4_of_clubs.png
+Black-Jack-master/png/4_of_diamonds.png
+Black-Jack-master/png/4_of_hearts.png
+Black-Jack-master/png/4_of_spades.png
+Black-Jack-master/png/5_of_clubs.png
+Black-Jack-master/png/5_of_diamonds.png
+Black-Jack-master/png/5_of_hearts.png
+Black-Jack-master/png/5_of_spades.png
+Black-Jack-master/png/6_of_clubs.png
+Black-Jack-master/png/6_of_diamonds.png
+Black-Jack-master/png/6_of_hearts.png
+Black-Jack-master/png/6_of_spades.png
+Black-Jack-master/png/7_of_clubs.png
+Black-Jack-master/png/7_of_diamonds.png
+Black-Jack-master/png/7_of_hearts.png
+Black-Jack-master/png/7_of_spades.png
+Black-Jack-master/png/8_of_clubs.png
+Black-Jack-master/png/8_of_diamonds.png
+Black-Jack-master/png/8_of_hearts.png
+Black-Jack-master/png/8_of_spades.png
+Black-Jack-master/png/9_of_clubs.png
+Black-Jack-master/png/9_of_diamonds.png
+Black-Jack-master/png/9_of_hearts.png
+Black-Jack-master/png/9_of_spades.png
+Black-Jack-master/png/ace_of_clubs.png
+Black-Jack-master/png/ace_of_diamonds.png
+Black-Jack-master/png/ace_of_hearts.png
+Black-Jack-master/png/ace_of_spades.png
+Black-Jack-master/png/back.png
+Black-Jack-master/png/back@2x.png
+Black-Jack-master/png/black_joker.png
+Black-Jack-master/png/cardBack.png
+Black-Jack-master/png/jack_of_clubs.png
+Black-Jack-master/png/jack_of_diamonds.png
+Black-Jack-master/png/jack_of_hearts.png
+Black-Jack-master/png/jack_of_spades.png
+Black-Jack-master/png/king_of_clubs.png
+Black-Jack-master/png/king_of_diamonds.png
+Black-Jack-master/png/king_of_hearts.png
+Black-Jack-master/png/king_of_spades.png
+Black-Jack-master/png/queen_of_clubs.png
+Black-Jack-master/png/queen_of_diamonds.png
+Black-Jack-master/png/queen_of_hearts.png
+Black-Jack-master/png/queen_of_spades.png
+Black-Jack-master/png/red_joker.png
+Black-Jack-master/README.md
