html telegram parser updated

--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,54 @@ Black-Jack-master/png/queen_of_hearts.png
 Black-Jack-master/png/queen_of_spades.png
 Black-Jack-master/png/red_joker.png
 Black-Jack-master/README.md
+$GIT_DIR/msg/
+msg/messages.html
+msg/messages7.html
+msg/messages6.html
+msg/messages5.html
+msg/messages4.html
+msg/messages3.html
+msg/messages2.html
+msg/js/script.js
+msg/images/section_web@2x.png
+msg/images/section_web.png
+msg/images/section_sessions@2x.png
+msg/images/section_sessions.png
+msg/images/section_photos@2x.png
+msg/images/section_photos.png
+msg/images/section_other@2x.png
+msg/images/section_other.png
+msg/images/section_frequent@2x.png
+msg/images/section_frequent.png
+msg/images/section_contacts@2x.png
+msg/images/section_contacts.png
+msg/images/section_chats@2x.png
+msg/images/section_chats.png
+msg/images/section_calls@2x.png
+msg/images/section_calls.png
+msg/images/media_voice@2x.png
+msg/images/media_voice.png
+msg/images/media_video@2x.png
+msg/images/media_video.png
+msg/images/media_shop@2x.png
+msg/images/media_shop.png
+msg/images/media_photo@2x.png
+msg/images/media_photo.png
+msg/images/media_music@2x.png
+msg/images/media_music.png
+msg/images/media_location@2x.png
+msg/images/media_location.png
+msg/images/media_game@2x.png
+msg/images/media_game.png
+msg/images/media_file@2x.png
+msg/images/media_file.png
+msg/images/media_contact@2x.png
+msg/images/media_contact.png
+msg/images/media_call@2x.png
+msg/images/media_call.png
+msg/images/back@2x.png
+msg/images/back.png
+msg/css/style.css
+codewithmosh/.vscode/settings.json
+.ipynb_checkpoints/telegram parsing with soup_find-checkpoint.ipynb
+.ipynb_checkpoints/iSANS telegram parsing example-checkpoint.ipynb
