excel example added

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,6 @@ msg/css/style.css
 codewithmosh/.vscode/settings.json
 .ipynb_checkpoints/telegram parsing with soup_find-checkpoint.ipynb
 .ipynb_checkpoints/iSANS telegram parsing example-checkpoint.ipynb
+.ipynb_checkpoints/Untitled1-checkpoint.ipynb
+codewithmosh/.ipynb_checkpoints/selenium github-checkpoint.ipynb
+codewithmosh/__pycache__/selenium.cpython-38.pyc
